<resources>
    <string name="app_name">Homespace</string>
    <string name="enter_password">enter password…</string>
    <string name="enter_username">enter username…</string>
    <string name="login">Login</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dialog_new_task">New Task Dialog</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_finances">Finances</string>
    <string name="create_task">Create</string>
    <string name="cancel_task">Cancel</string>
    <string name="name_your_homespace_hint">name your homespace&#8230;</string>
    <string name="continue_btn_name_homespace">continue</string>
    <string name="join_existing_space_option">Joining an existing Homespace? Tap here!</string>
    <string name="create_new_homespace_option">Want to create a new Homespace? Tap here!</string>
    <string name="join_existing_button">Join</string>
    <string name="logo__icon_placeholder_description">logo placeholder</string>
    <string name="finances_title">Finances</string>
    <string name="tasks_title">Tasks</string>
    <string name="button_test_Calendar">Button</string>
    <string name="home_title">Home</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="add_member">Add Member</string>
    <string name="username">username</string>
    <string name="sorry">Sorry, that feature has not been implemented yet. Ask your roommates to add you through the app.</string>
    <string name="sign_out">Sign Out</string>
    <string name="homespace_members">Homespace Members</string>
    <string name="register">Register</string>
    <string name="confirm_pw">confirm password…</string>
    <string name="returning_tap_here">Returning to Homespace? Tap here to sign in!</string>
    <string name="not_registered_tap_here">Not registered? Tap here to sign up!</string>
    <string name="stay_signed_in">Stay signed in?</string>
    <string name="finance_title">Finance title…</string>
    <string name="finance_description">Finance description…</string>
    <string name="finance_amount_0_00">Finance Amount $(0.00)</string>
    <string name="completion_date">Completion date:</string>
    <string name="completion_time">Completion time:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="assign_to">Assign to:</string>
    <string name="members">Members</string>
    <string name="task_title">Task title…</string>
    <string name="task_description">Task description…</string>
    <string name="confirm">Confirm</string>
    <string name="amount">amount</string>
    <string name="checkbox">CheckBox</string>
    <string name="description_here">description here</string>
    <string name="due_date_time">due date/time</string>
    <string name="due_date">Due Date:</string>
    <string name="title">Title</string>
</resources>
